--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "nodemon": "^3.1.9",
     "postcss": "^8.5.1",
     "postcss-cli": "^11.0.0",
-    "sass": "^1.84.0"
+    "sass": "^1.84.0",
+    "tinymce": "^7.6.1"
   },
   "scripts": {
     "build:css:compile": "sass ./app/assets/stylesheets/application.bootstrap.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules",
