--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+/app/assets/builds/application.js
+/app/assets/builds/application.css
