--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.12",
     "@popperjs/core": "^2.11.8",
+    "@stimulus-components/auto-submit": "^6.0.0",
     "apexcharts": "^4.4.0",
     "autoprefixer": "^10.4.20",
     "bootstrap": "^5.3.3",
